--- a/question1.html
+++ b/question1.html
@@ -5,8 +5,8 @@
 </head>
 
 <body>
-    <h1>My name is <b>Alexandre DAOOD</b> </h1>
-    <h2>My age is 21 </h2>
-    <h3>Click <a href="question1.html"> here </a> for my favorite receipe</h3>
+    <p>My name is <b>Alexandre DAOOD</b> </p>
+    <p>My age is 21.</p>
+    <p>Click <a href="question1.html">here</a> for my favorite receipe</p>
 </body>
  
