--- a/question3.html
+++ b/question3.html
@@ -7,10 +7,10 @@
 <body>
     <h1>
         This week I will :
-        <ol>
-            <lI>Buy Shopping</lI>
-            <lI>Walk the dog</lI>
-            <lI>Do my washing</lI>
+        <ol type="I">
+            <li>Buy Shopping</li>
+            <lI>Walk the dog</li>
+            <li>Do my washing</li>
         </ol>
     </h1>
 </body>
