--- a/question3.html
+++ b/question3.html
@@ -5,8 +5,8 @@
 </head>
 
 <body>
+    <h1>This week I will :</h1>
     <h1>
-        This week I will :
         <ol type="I">
             <li>Buy Shopping</li>
             <lI>Walk the dog</li>
