--- a/question5.html
+++ b/question5.html
@@ -10,7 +10,7 @@
             <li> Buy 2 Pounds of Potatoes</li>
             <li> Peel 2 Pounds of Potatoes</li>
             <li> Bring water to the boil</li>
-                <ol type="1">
+                <ol type="I">
                     <li>Throw water in a pot.</li>
                     <li>Put pot on cooker</li>
                     <li>Switch cooker on</li>
