--- a/question5.html
+++ b/question5.html
@@ -10,13 +10,13 @@
             <li> Buy 2 Pounds of Potatoes</li>
             <li> Peel 2 Pounds of Potatoes</li>
             <li> Bring water to the boil</li>
-                <ol type="I">
+                <ol>
                     <li>Throw water in a pot.</li>
                     <li>Put pot on cooker</li>
                     <li>Switch cooker on</li>
-                        <ol type="a">
-                            <li>Switch on the right plate</li>
-                        </ol>
+                        <dl>
+                            <dd>a. Switch on the right plate</dd>
+                        </dl>
                     <li>Wait till it boils</li>
                 </ol>
             <li>Boil them</li>
