--- a/question5.html
+++ b/question5.html
@@ -22,4 +22,5 @@
             <li>Boil them</li>
             <li>Mash them up when they are soft</li>
         </ol>
+        <p><a href="question1.html"> Go back</a> to my personal details.</p>
 </body>
