--- a/question1.html
+++ b/question1.html
@@ -8,5 +8,6 @@
     <p>My name is <b>Alexandre DAOOD</b> </p>
     <p>My age is 21.</p>
     <p><a href="question5.html">Click here</a> for my favorite receipe</p>
+    <p><a href="mailto:alexandre.daood-thompson@epita.fr">Contact me !</a></p>
 </body>
  
