Question 9 [test&update]

--- a/question1.html
+++ b/question1.html
@@ -9,5 +9,7 @@
     <p>My age is 21.</p>
     <p><a href="question5.html">Click here</a> for my favorite receipe</p>
     <p><a href="mailto:alexandre.daood-thompson@epita.fr">Contact me !</a></p>
+    <p><a href="question2.html">Click here</a> for more informations</p>
+    <p><a href="question9.html">Return to menu</a></p>
 </body>
  
