--- a/question3.html
+++ b/question3.html
@@ -11,4 +11,5 @@
             <lI>Walk the dog</li>
             <li>Do my washing</li>
         </ol>
+    <p><a href="question9.html">Return to menu</a></p>
 </body>
