--- a/question4.html
+++ b/question4.html
@@ -19,4 +19,5 @@
     <dl>
         <dd>Then everything changed and I became a lecturer.</dd>
     </dl>
+    <p><a href="question9.html">Return to menu</a></p>
 </body>
