--- a/question5.html
+++ b/question5.html
@@ -23,4 +23,5 @@
             <li>Mash them up when they are soft</li>
         </ol>
         <p><a href="question1.html"> Go back</a> to my personal details.</p>
+        <p><a href="question9.html">Return to menu</a></p>
 </body>
