--- a/question7.html
+++ b/question7.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>My favourite Sites</title>
+    <title>My favourite Links</title>
 </head>
 
 <body>
@@ -31,4 +31,5 @@
             <li><a href="https://www.ecosia.org/">Ecosia</a> </li>
             <li><a href="https://swisscows.com/">Swiss Cows</a> </li>
         </ol>
+    <p><a href="question9.html">Return to menu</a></p>
 </body>
