--- a/question9.html
+++ b/question9.html
@@ -1,31 +1,120 @@
 <html>
 
 <head>
-    <title>My Personal WebSite</title>
+	<title>My Personal WebSite</title>
 </head>
 
 <body>
-    <table>
-    <thead>
-        <tr>
-            <th colspan="1">Menu</th>
-        </tr>
-    </thead>
-    <tbody>
-        <tr>
-            <td><a href="question5.html">Potato Receipe</td>
-        </tr>
-        <tr>
-            <td><a href="question3.html">To Do Lists</td>
-        </tr>
-        <tr>
-            <td><a href="question7.html">My favourite links</td>
-        </tr>
-        <tr>
-            <td><a href="question4.html">My past</td>
-        </tr>
-        <tr>
-            <td><a href="question1.html">About me</td>
-        </tr>
-    </tbody>
-</table>
+	<table>
+		<thead>
+			<tr>
+                <p><a id="menu"></a></p>
+				<th colspan="1">Menu</th>
+			</tr>
+		</thead>
+		<tbody>
+			<tr>
+				<td><a href="question5.html">Potato Receipe page</td>
+                <td><a href="#potato">Receipe below</a></td>
+			</tr>
+			<tr>
+				<td><a href="question3.html">To Do Lists page</td>
+                <td><a href="#lists">To do lists below</a></td>
+			</tr>
+			<tr>
+				<td><a href="question7.html">My favourite links page</td>
+                <td><a href="#links">Links below</a></td>
+			</tr>
+			<tr>
+				<td><a href="question4.html">My past page</td>
+                <td><a href="#past">My past below</a></td>
+			</tr>
+			<tr>
+				<td><a href="question1.html">About me page</td>
+                <td><a href="#me">About me below</a></td>
+			</tr>
+		</tbody>
+	</table>
+
+    <hr />
+    <p><a id="potato"></a></p>
+    <h2>Potato Mash</h2>
+        <ol type="I">
+            <li> Buy 2 Pounds of Potatoes</li>
+            <li> Peel 2 Pounds of Potatoes</li>
+            <li> Bring water to the boil</li>
+                <ol>
+                    <li>Throw water in a pot.</li>
+                    <li>Put pot on cooker</li>
+                    <li>Switch cooker on</li>
+                        <dl>
+                            <dd>a. Switch on the right plate</dd>
+                        </dl>
+                    <li>Wait till it boils</li>
+                </ol>
+            <li>Boil them</li>
+            <li>Mash them up when they are soft</li>
+        </ol>
+        <p><a href="#menu">Go up</a></p>
+    <hr />
+    <p><a id="lists"></a></p>
+    <h1>This week I will :</h1>
+        <ol type="I">
+            <li>Buy Shopping</li>
+            <lI>Walk the dog</li>
+            <li>Do my washing</li>
+        </ol>
+    <p><a href="#menu">Go up</a></p>
+    <hr />
+    <p><a id="links"></a></p>
+    <h2>Fun</h2>
+        <ol>
+            <li><a href="http://www.findtheinvisiblecow.com/">Find the invisible cow</a> </li>
+            <li><a href="http://www.theuselessweb.com/">The useless web</a> </li>
+            <li><a href="http://hackertyper.com/">Hacker typer</a> </li>
+            <li><a href="https://www.pointerpointer.com/">Pointer !!</a> </li>
+            <li><a href="http://shutupandtakemymoney.com/">Shut Up and take my Money</a> </li>
+        </ol>
+    
+    <h2>Ireland</h2>
+        <ol>
+            <li><a href="https://www.ireland.ie/">This is Ireland</a> </li>
+            <li><a href="https://www.lonelyplanet.com/ireland">Ireland travel</a> </li>
+            <li><a href="https://www.tourismireland.com/">Welcome to tourist Ireland</a> </li>
+            <li><a href="https://www.bankofireland.com/">Bank of Ireland</a> </li>
+            <li><a href="https://www.cricketireland.ie/">Cricket Ireland</a> </li>
+        </ol>
+
+    <h2>Searchengines</h2>
+        <ol>
+            <li><a href="http://www.bing.com/">Bing</a> </li>
+            <li><a href="https://duckduckgo.com/">Duck Duck Go</a> </li>
+            <li><a href="http://gibiru.com/">Gibiru</a> </li>
+            <li><a href="https://www.ecosia.org/">Ecosia</a> </li>
+            <li><a href="https://swisscows.com/">Swiss Cows</a> </li>
+        </ol>
+    <p><a href="#menu">Go up</a></p>
+    <hr />
+        <p><a id="past"></a></p>
+        <h1>Childhood</h1>
+        <dl>
+            <dd>I had a very disturbed childhood.</dd>
+        </dl>
+
+        <h1>Adolescence</h1>
+        <dl>
+            <dd>As a teenager it just got worse.</dd>
+        </dl>
+
+        <h1>Adult Life</h1>
+        <dl>
+            <dd>Then everything changed and I became a lecturer.</dd>
+        </dl>
+    <p><a href="#menu">Go up</a></p>
+    <hr />
+    <p><a id="me"></a></p>
+        <p>My name is <b>Alexandre DAOOD</b> </p>
+        <p>My age is 21.</p>
+        <p><a href="question5.html">Click here</a> for my favorite receipe</p>
+        <p><a href="mailto:alexandre.daood-thompson@epita.fr">Contact me !</a></p>
+    <p><a href="#menu">Go up</a></p> 
